enable pdf on HTML site, update read me

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Tenishchev Semen CV</title>
 </head>
 <body>
-Dry run
+<embed src="https://tenischev.github.io/cv/cv.pdf" width="100%"/>
 </body>
 </html>
